# swarmcrest

./: .env.example  .gitignore  Caddyfile  Dockerfile  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  justfile  prometheus.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
backend/: Cargo.toml  Dockerfile.dev
backend/src/: auth.rs  config.rs  lib.rs  llms_txt.rs  main.rs  metrics.rs  oauth.rs  queue.rs  rate_limit.rs  replay.rs  worker_pool.rs
backend/src/api/: mod.rs  ws.rs
backend/src/db/: mod.rs
backend/src/engine/: game.rs  lua_api.rs  player.rs  server.rs  spatial.rs  world.rs
backend/tests/: api_bots.rs  api_matches.rs  api_oauth.rs  api_teams_keys.rs  api_tournaments.rs  headless_queue.rs  original_bots.rs
data/maps/: swarmcrest.json
docs/: game-overview.md  implementation-plan.md  lua-api-reference.md  v2-roadmap.md
frontend/: index.html  playwright.config.ts
frontend/e2e/: navigation.spec.ts  oauth.spec.ts  pages-render.spec.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: FeedbackButton.tsx  SsoButtons.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuthProviders.ts
frontend/src/pages/: About.tsx  ApiKeys.tsx  BotEditor.tsx  BotLibrary.tsx  Documentation.tsx  GameList.tsx  GameViewer.tsx  Home.tsx  Login.tsx  OAuthCallback.tsx  Register.tsx  (+1 more)
grafana/dashboards/: api-infrastructure.json  game-engine.json
nginx/: swarmcrest.conf
scripts/: backup-db.sh  pre-commit  run-tests.sh  setup-hooks.sh  setup-vps.sh
(+1 files in other folders)
