[package]
name = "swarmcrest-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.10", features = ["lua51", "vendored", "serialize"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
futures = "0.3"
argon2 = "0.5"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
prometheus = "0.13"
lazy_static = "1.4"
oauth2 = "5"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
